--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -279,7 +279,7 @@ jobs:
           brew install automake
           cd $GITHUB_WORKSPACE/..
           curl -L https://gitlab.xiph.org/xiph/ogg/-/archive/v1.3.5/ogg-v1.3.5.tar.bz2 --output ogg.tar.bz2
-          tar xfvz ogg.tar.bz2
+          tar xfz ogg.tar.bz2
           cd ogg*/
           echo "*** building libogg ***"
           mkdir build && cd build
@@ -287,7 +287,7 @@ jobs:
           cmake --build . --target install
           cd $GITHUB_WORKSPACE/..
           curl -L https://github.com/xiph/flac/archive/refs/tags/1.3.3.tar.gz --output flac.tar.xz
-          tar xfvz flac.tar.xz
+          tar xfz flac.tar.xz
           cd flac*/
           echo "*** building flac ***"
           cd build # build directory already exists
@@ -295,7 +295,7 @@ jobs:
           cmake --build . --target install
           cd $GITHUB_WORKSPACE/..
           curl -L https://github.com/xiph/opus/archive/refs/tags/v1.3.1.tar.gz --output opus.tar.gz
-          tar xfvz opus.tar.gz
+          tar xfz opus.tar.gz
           cd opus*/
           echo "*** building opus ***"
           mkdir build && cd build
@@ -303,7 +303,7 @@ jobs:
           cmake --build . --target install
           cd $GITHUB_WORKSPACE/..
           curl -L https://github.com/xiph/vorbis/releases/download/v1.3.7/libvorbis-1.3.7.tar.gz --output libvorbis.tar.gz
-          tar xfvz libvorbis.tar.gz
+          tar xfz libvorbis.tar.gz
           cd libvorbis*/
           echo "building *** libvorbis ***"
           mkdir build && cd build
@@ -311,7 +311,7 @@ jobs:
           cmake --build . --target install
           cd $GITHUB_WORKSPACE/..
           curl -L https://github.com/libsndfile/libsndfile/releases/download/1.0.31/libsndfile-1.0.31.tar.bz2 --output libsndfile.tar.bz2
-          tar xfvz libsndfile.tar.bz2
+          tar xfz libsndfile.tar.bz2
           cd libsndfile*/
           echo "building libsndfile"
           mkdir build && cd build
