fix thread pinning
parse hardware topology to find out which CPUs belong to the same core.
Sort the list in a way that threads will be pinned to seperate cores.

--- a/server/supernova/CMakeLists.txt
+++ b/server/supernova/CMakeLists.txt
@@ -53,6 +53,8 @@ set(libsupernova_src
     server/node_graph.cpp
     server/server.cpp
     server/server_args.cpp
+
+    utilities/hardware_topology.cpp
 )
 
 if(APPLE)
