CMake macOS: codesign the app bundle itself as well

--- a/editors/sc-ide/CMakeLists.txt
+++ b/editors/sc-ide/CMakeLists.txt
@@ -572,6 +572,9 @@ if(APPLE OR WIN32)
                     \\\\) \
                     -exec codesign --force --sign - {} \\\;\"
                 )
+                execute_process(COMMAND 
+                    codesign --force --sign - ${CMAKE_INSTALL_PREFIX}/SuperCollider/SuperCollider.app
+                )
             ")
         endif()
 
