CMake macOS: codesign all ugens

--- a/editors/sc-ide/CMakeLists.txt
+++ b/editors/sc-ide/CMakeLists.txt
@@ -567,7 +567,7 @@ if(APPLE OR WIN32)
                         -o -name \\\"sclang\\\" \
                         -o -name \\\"scsynth\\\" \
                         -o -name \\\"supernova\\\" \
-                        -o -name \\\"DiskIO_UGens*\\\" \
+                        -o -name \\\"*.scx\\\" \
                         -maxdepth 1 \
                     \\\\) \
                     -exec codesign --force --sign - {} \\\;\"
