--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -387,6 +387,7 @@ jobs:
             msvc-year: '2019'
             vcvars-script: 'vcvars32.bat'
             chocolatey-options: '--forcex86' # '--forcex86' for 32-bit build
+            vcpkg-triplet: x86-windows # for readline
             use-qtwebengine: 'ON' # might need to be turned off for MinGW
             ableton-link: 'ON' # might need to be turned off for MinGW
             artifact-suffix: 'win32' # set if needed - will trigger artifact upload
@@ -404,6 +405,7 @@ jobs:
             msvc-year: '2019'
             vcvars-script: 'vcvars64.bat'
             chocolatey-options: '' # '--forcex86' for 32-bit build
+            vcpkg-triplet: x64-windows # for readline
             use-qtwebengine: 'ON' # might need to be turned off for MinGW
             ableton-link: 'ON' # might need to be turned off for MinGW
             artifact-suffix: 'win64' # set if needed - will trigger artifact upload
@@ -477,6 +479,11 @@ jobs:
           curl -L https://www.steinberg.net/asiosdk -o asio.zip
           7z x asio.zip -y
           mv asiosdk_* $GITHUB_WORKSPACE/external_libraries/portaudio/asiosdk
+      - name: install readline
+        if: matrix.vcpkg-triplet
+        shell: bash
+        run: |
+          vcpkg install readline --triplet="${{ matrix.vcpkg-triplet }}"
       - name: configure
         shell: bash
         run: |
@@ -484,7 +491,7 @@ jobs:
 
           mkdir $BUILD_PATH && cd $BUILD_PATH
 
-          cmake -G "${{ matrix.cmake-generator }}" -A "${{ matrix.cmake-arch }}" -D CMAKE_PREFIX_PATH="$Qt5_DIR" -D SUPERNOVA=ON -D SC_USE_QTWEBENGINE=${{ matrix.use-qtwebengine }} -D SC_ABLETON_LINK=${{ matrix.ableton-link }} -D CMAKE_BUILD_TYPE=Release .. # build type is specified here for MinGW build
+          cmake -G "${{ matrix.cmake-generator }}" -A "${{ matrix.cmake-arch }}" -D CMAKE_PREFIX_PATH="$Qt5_DIR;$VCPKG_INSTALLATION_ROOT/installed/${{ matrix.vcpkg-triplet }}" -D SUPERNOVA=ON -D SC_USE_QTWEBENGINE=${{ matrix.use-qtwebengine }} -D SC_ABLETON_LINK=${{ matrix.ableton-link }} -D CMAKE_BUILD_TYPE=Release .. # build type is specified here for MinGW build
 
       - name: build
         shell: bash
