--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -197,6 +197,7 @@ jobs:
             use-syslibs: false
             shared-libscsynth: false
             build-libsndfile: true
+            vcpkg-triplet: x64-osx-dynamic # required for build-libsndfile
             artifact-suffix: 'macOS' # set if needed - will trigger artifact upload
 
           - job-name: 'legacy'
@@ -207,6 +208,7 @@ jobs:
             use-syslibs: false
             shared-libscsynth: false
             build-libsndfile: true
+            vcpkg-triplet: x64-osx-dynamic # required for build-libsndfile
             artifact-suffix: 'macOS-legacy' # set if needed - will trigger artifact upload
 
           - job-name: 'use system libraries'
@@ -271,51 +273,11 @@ jobs:
           brew install portaudio ccache fftw
           # add ccamke to PATH - see https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-commands-for-github-actions
           echo "/usr/local/opt/ccache/libexec" >> $GITHUB_PATH
-      - name: build libsndfile # to make it compatible with older OSes (lower deployment target)
-        if: matrix.build-libsndfile == true
+      - name: install libsndfile # to make it compatible with older OSes (lower deployment target)
+        if: matrix.build-libsndfile == true && matrix.vcpkg-triplet
         run: |
           brew uninstall --ignore-dependencies libsndfile libvorbis libogg flac opus
-          brew install automake
-          cd $GITHUB_WORKSPACE/..
-          curl -L https://gitlab.xiph.org/xiph/ogg/-/archive/v1.3.5/ogg-v1.3.5.tar.bz2 --output ogg.tar.bz2
-          tar xfz ogg.tar.bz2
-          cd ogg*/
-          echo "*** building libogg ***"
-          mkdir build && cd build
-          cmake -G"Unix Makefiles" -DBUILD_FRAMEWORK=OFF -DBUILD_SHARED_LIBS=OFF -DCMAKE_OSX_ARCHITECTURES=x86_64 -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_FLAGS="-Wall -Wextra" -DCMAKE_INSTALL_PREFIX=/usr/local ..
-          cmake --build . --target install
-          cd $GITHUB_WORKSPACE/..
-          curl -L https://github.com/xiph/flac/archive/refs/tags/1.3.3.tar.gz --output flac.tar.xz
-          tar xfz flac.tar.xz
-          cd flac*/
-          echo "*** building flac ***"
-          cd build # build directory already exists
-          cmake -G"Unix Makefiles" -DBUILD_SHARED_LIBS=OFF -DCMAKE_OSX_ARCHITECTURES=x86_64 -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_FLAGS="-Wall -Wextra" -DCMAKE_INSTALL_PREFIX=/usr/local ..
-          cmake --build . --target install
-          cd $GITHUB_WORKSPACE/..
-          curl -L https://github.com/xiph/opus/archive/refs/tags/v1.3.1.tar.gz --output opus.tar.gz
-          tar xfz opus.tar.gz
-          cd opus*/
-          echo "*** building opus ***"
-          mkdir build && cd build
-          cmake -G"Unix Makefiles" -DBUILD_SHARED_LIBS=OFF -DCMAKE_OSX_ARCHITECTURES=x86_64 -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_FLAGS="-Wall -Wextra" -DCMAKE_INSTALL_PREFIX=/usr/local ..
-          cmake --build . --target install
-          cd $GITHUB_WORKSPACE/..
-          curl -L https://github.com/xiph/vorbis/releases/download/v1.3.7/libvorbis-1.3.7.tar.gz --output libvorbis.tar.gz
-          tar xfz libvorbis.tar.gz
-          cd libvorbis*/
-          echo "building *** libvorbis ***"
-          mkdir build && cd build
-          cmake -G"Unix Makefiles" -DBUILD_FRAMEWORK=OFF -DBUILD_SHARED_LIBS=OFF -DCMAKE_OSX_ARCHITECTURES=x86_64 -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_FLAGS="-Wall -Wextra" -DCMAKE_INSTALL_PREFIX=/usr/local ..
-          cmake --build . --target install
-          cd $GITHUB_WORKSPACE/..
-          curl -L https://github.com/libsndfile/libsndfile/releases/download/1.0.31/libsndfile-1.0.31.tar.bz2 --output libsndfile.tar.bz2
-          tar xfz libsndfile.tar.bz2
-          cd libsndfile*/
-          echo "building libsndfile"
-          mkdir build && cd build
-          cmake -G"Unix Makefiles" -DBUILD_SHARED_LIBS=ON -DCMAKE_OSX_ARCHITECTURES=x86_64 -DCMAKE_C_FLAGS="-Wall -Wextra" -DCMAKE_INSTALL_PREFIX=/usr/local ..
-          cmake --build . --target install
+          vcpkg install libsndfile --triplet="${{ matrix.vcpkg-triplet }}"
       - name: install system libraries
         if: env.USE_SYSLIBS == 'true'
         run: brew install yaml-cpp boost
@@ -343,6 +305,11 @@ jobs:
           if $SHARED_LIBSCSYNTH; then EXTRA_CMAKE_FLAGS="-DLIBSCSYNTH=ON $EXTRA_CMAKE_FLAGS"; fi
 
           if [[ -z "${{ matrix.qt-version }}" ]]; then EXTRA_CMAKE_FLAGS="-DCMAKE_PREFIX_PATH=`brew --prefix qt5` -DSC_VERIFY_APP=ON $EXTRA_CMAKE_FLAGS"; fi
+
+          if [[ -n "${{ matrix.vcpkg-triplet }}" ]]; then
+            export VCPKG_ROOT=$VCPKG_INSTALLATION_ROOT
+            EXTRA_CMAKE_FLAGS="-DVCPKG_TARGET_TRIPLET=${{ matrix.vcpkg-triplet }} -DCMAKE_BUILD_TYPE=Release $EXTRA_CMAKE_FLAGS"
+          fi
 
           echo "EXTRA_CMAKE_FLAGS:" $EXTRA_CMAKE_FLAGS
 
